static/style/style.css
html, body {
    width: 100vw;
    height: 100vh;
    margin: 0;
    overflow: hidden;
}

/* -----------------------------------------------------------------------------------------------------------------*/

body::after {
    position: absolute;
    width: 0;
    height: 0;
    overflow: hidden;
    z-index: -1;
    content: url(../image/loader.gif);
}

.overlay {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
}

#overlay-one {
    background-color: #e9e9e9;
    opacity: 0.50;
    z-index: 2000001;
}

#overlay-two {
    background: url(../image/loader.gif) 50% 40% no-repeat;
    opacity: 0.75;
    z-index: 2000002;
}

/* -----------------------------------------------------------------------------------------------------------------*/

#page-loading > .container, #page-login > .container {
    max-width: 450px;
}

#page-login #a-login {
    width: 25em;
    max-width: 90vw;
}

.is-blinking {
    animation: blinker 1s linear infinite;
}

@keyframes blinker {
    50% {
        opacity: 0;
    }
}

/* -----------------------------------------------------------------------------------------------------------------*/

#page-data > #data-header {
    width: 100%;
    height: 7.5em;
    padding: 1em;
}

#some-head p:nth-of-type(1) {
    float: left;
}

#some-head p:nth-of-type(2) {
    float: right;
}

#some-select {
    padding-top: 0.5em;
    clear: both;
}

#user-email, #head-app-name, #current-device, #current-date {
    font-weight: 700;
}

#select-button {
    width: 15%;
}

select::-ms-expand {
    display: none;
}

/* -----------------------------------------------------------------------------------------------------------------*/

#page-data > #data-body {
    width: 100vw;
    height: calc(100% - 7.5em);
}

#page-data > #data-body > #map-container {
    width: 60vw;
    height: calc(100vh - 7.5em);
    float: left;
}

#page-data > #data-body > #map-container > #map-area {
    height: 100%;
    width: 100%;
}

/* -----------------------------------------------------------------------------------------------------------------*/

#page-data > #data-body > #table-container {
    width: 40vw;
    height: calc(100vh - 7.5em);
    overflow: auto;
    float: left;
}

#table-data tr.current {
    background-color: #e1e1e1;
}

